# simpler-easier

./: .ghci  CHANGELOG.md  README.md  simpler-easier.cabal
src/: SimplerEasier.hs
src/SimplerEasier/: LC.hs  Pi.hs  SF.hs  STLC.hs
tests/: Tests.hs
