cabal-version:      2.4
name:               simpler-easier
version:            0.1.0.0
author:             Andrea Bedini
maintainer:         andrea@andreabedini.com
extra-source-files: CHANGELOG.md

library
    -- exposed-modules:  SimplerEasier.LC
    --                 , SimplerEasier.STLC
    build-depends:    base ^>=4.14.3.0
                    , pretty-simple
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite simpler-easier-tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Tests.hs
    build-depends:    base ^>=4.14.3.0
                    , simpler-easier
                    , hedgehog
                    , tasty
                    , tasty-hunit
                    , tasty-hedgehog

